--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 
 Contact: Paul Julian ([email](mailto:pauljulianphd@gmail.com))
 
-## Big Wondermere Survey
+## Big Windermere Survey
 
 The Freshwater Biological Association (FBA) and Lancaster University kicked off a new citizen (community) science project on Windermere ([link](https://www.fba.org.uk/volunteer/the-big-windermere-survey)). 
 
