--- a/README.Rmd
+++ b/README.Rmd
@@ -22,3 +22,5 @@ The Freshwater Biological Association (FBA) and Lancaster University kicked off 
 ### Spatial Hotspot analysis
 
 Using the citizen collected data, this analysis will evaluate potential cold/hot spots in indicator parameters during the entire survey period and individual sampling events.
+
+* June 2022 Survey - Exploratory Analysis [Link](https://swampthingecology.org/Windermere/slides/202206_Survey_WindermereHotSpot#1)
